[tool.poetry]
name = "omnia-sdk"
version = "0.1.0"
description = ""
authors = ["Team 42"]

readme = "README.md"
[tool.poetry.dependencies]
python = ">=3.12, <3.14"
holidays = "^0.66"
langgraph = "0.4.5"
pytest = "^8.3.4"
starlette = "^0.45.3"
requests = "^2.32.3"
numpy = "^2.2.4"
openai = "^1.68.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"
